[gd_scene load_steps=8 format=2]

[ext_resource path="res://story/Chapter2_Intro.gd" type="Script" id=1]
[ext_resource path="res://assets/SpaceMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://storyboard_bgm.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0.152941, 0.152941, 0.152941, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "text_slide"
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 832 ), Vector2( 24, -600 ) ]
}

[node name="Intro" type="Control"]
margin_right = 1024.0
margin_bottom = 1024.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 0.621, 0.784 )

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = -400.0
margin_right = 600.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 480.0
margin_top = 20.0
margin_right = 598.0
margin_bottom = 60.0

[node name="Skip" type="Button" parent="HBoxContainer"]
margin_right = 52.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "SKIP"
align = 2

[node name="Spacer" type="Control" parent="HBoxContainer"]
margin_left = 56.0
margin_right = 56.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Pause" type="Button" parent="HBoxContainer"]
margin_left = 60.0
margin_right = 122.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "PAUSE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/text_slide = SubResource( 2 )

[node name="transitiontimer" type="Timer" parent="."]
wait_time = 10.0

[node name="storyboard_bgm" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="HBoxContainer/Skip" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="timeout" from="transitiontimer" to="." method="_on_transitiontimer_timeout"]
